syntax = "proto3";

message OptionQuoteConfig {
    repeated string underlying = 1;
}

message OptionQuoteChainConfig {
    string underlying = 1;
}

message OptionChainTradesConfig {
    string underlying = 1;
}

message OptionQuote {
    string symbol = 1;
    float bid = 2;
    float bidsz = 3;
    string bidexch = 4;
    string biddate = 5;
    float ask = 6;
    float asksz = 7;
    string askexch = 8;
    string askdate = 9;
}

message OptionQuoteChain {
    string underlying = 1;
    repeated OptionQuote quote = 2;
}

message OptionTrade {
    string symbol = 1;
    float price = 2;
    float size = 3;
    string exchange = 4;
    uint64 fill_timestamp = 5;
}